General Sass Style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
-		<!--
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Title page -->
@@ -27,8 +24,6 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/animations.css" />
-		<link rel="stylesheet" href="css/dark-mode.css" />
 
 		<!-- Kit Font Awesome -->
 		<script src="https://kit.fontawesome.com/2b3350905d.js" crossorigin="anonymous"></script>
@@ -191,32 +186,6 @@
 				</div>
 			</div>
 
-			<!-- ########## Course of study ########## 
-			<div class="container my-7 mb-mb-0">
-				<div class="row mb-sm-3">
-					<div class="col-12">
-						<h2>Corsi e studi</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-12 col-md-6 mb-5 mb-md-0">
-						<h5>Corsi</h5>
-						<small>2019</small>
-						<h4>
-							<a href="https://marchettidesignshop.com/next-level-wp-pro/" target="_blank" class="text-decoration-none"
-								>Corso NLWP PRO <sup><i class="fas fa-external-link-alt"></i></sup
-							></a>
-						</h4>
-					</div>
-
-					<div class="col-12 col-md-6 mb-5 mb-md-0">
-						<h5>Studi</h5>
-						<small>2010 - 2016</small>
-						<h4>Scuola d'Arte Andrea Fantoni</h4>
-					</div>
-				</div>
-			</div>-->
-
 			<footer>
 				<a href="https://www.iubenda.com/privacy-policy/35281125" class="iubenda-white iubenda-embed" title="Privacy Policy ">Privacy Policy</a>
 				<script>
@@ -241,18 +210,15 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"></script>
+		<script src="js/jquery-3.5.1.slim.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 
+		<!-- Granim JS -->
 		<script src="/js/granim.min.js"></script>
-
-		<!-- Typewrite effect -->
-		<script src="js/typewrite.js"></script>
 
 		<!-- Scripts / init JS -->
 		<script src="js/granim-init.js"></script>
-		<script src="js/scripts.js"></script>
+		<script src="js/scripts-init.js"></script>
 		<script src="js/swiper-init.js"></script>
 	</body>
 </html>
