--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 		<link rel="icon" type="image/ico" sizes="32x32" href="img/favicon/favicon-32x32.ico" />
 		<link rel="icon" type="image/ico" sizes="16x16" href="img/favicon/favicon-16x16.ico" />
 
-		<!-- Bootstrap CSS 
-		<link rel="stylesheet" href="css/bootstrap.min.css" /> -->
-		<link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-		<noscript><link rel="stylesheet" href="css/bootstrap.min.css" /></noscript>
-
 		<!-- Swiper JS -->
 		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -26,6 +21,7 @@
 
 		<!-- Google Font -->
 		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet" />
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-180341014-1"></script>
@@ -42,167 +38,123 @@
 	<body>
 		<main class="overflow-x-hidden">
 			<!-- ########## Hero presentation ########## -->
-			<div class="container h-100">
-				<div class="presentation row align-items-center vh-100 position-relative">
-					<div class="col-12">
-						<div class="presentation-box">
-							<h1 style="font-size: 3.5em" class="mb-2 hi-name font-weight-light">Ciao, mi chiamo <b>Matteo</b> <span class="hi-emoji">👋</span></h1>
-							<h1 class="h4 font-weight-light mb-4">
-								Sono un <b>web designer</b> e <b class="d-inline-block">Front-end developer</b><br />
-								specializzato in <b>WordPress</b>, ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.
+			<div class="splash-hero">
+				<div class="container">
+					<div class="presentation row align-items-center vh-100 position-relative">
+						<div class="splash-hero-container">
+							<h1 class="fs-3">
+								<div class="fs-1">Ciao, mi chiamo Matteo <span class="hi-emoji">👋</span></div>
+
+								<div class="fs-2">Front-end developer specializzato in <b>WordPress</b> 👨‍💻</span>,</div>
+								<br />ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.
 							</h1>
-							<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" class="text-decoration-none mr-4"><i class="fab fa-linkedin h3 mb-0"></i> </a>
-							<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" class="text-decoration-none mr-4"><i class="fab fas fa-envelope h3 mb-0"></i> </a>
-							<a href="tel:+393486741003" class="text-decoration-none mr-4"><i class="fab fas fa-mobile h3 mb-0"></i> </a>
-						</div>
-					</div>
-					<div class="col-12 position-absolute mb-4" style="bottom: 0">
-						<div class="top-bottom-button">
+							<div class="social-icon-container fs-2">
+								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" class="text-decoration-none mr-4"><span class="icon-linkedin"></span></a>
+								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" class="text-decoration-none mr-4"><span class="icon-email"></span></a>
+								<a href="tel:+393486741003" class="text-decoration-none mr-4"><span class="icon-mobile"></span></a>
+							</div>
 							<a href="#works">
-								<i class="fas fa-arrow-down"></i>
+								<span class="icon-arrow-down"></span>
 							</a>
 						</div>
 					</div>
 				</div>
 
 				<!-- Gradient morph -->
-				<div class="gradient-box">
-					<canvas class="gradient-cool" id="canvas-basic"></canvas>
-				</div>
+
+				<canvas class="gradient-box" id="canvas-basic"></canvas>
 			</div>
 
 			<!-- ########## Portfolio ########## -->
-			<div id="works" class="container mt-7 mb-7 sm-mt-12">
-				<div class="row mb-sm-3">
-					<div class="col-12">
-						<h2>Lavori selezionati</h2>
-					</div>
-				</div>
-				<div class="swiper-container">
+			<div id="works" class="container">
+				<h2>Lavori selezionati</h2>
+
+				<div class="card-slider-container">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide work">
-							<a href="https://www.sogevasrl.com/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="https://www.sogevasrl.com/" target="_blank" class="card">
 								<picture>
 									<source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
 									<source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
+									<img class="img-fluid card-thumbnail" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #25823d">
-									<div class="title-box mb-3">
-										<h4>Sogeva srl</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
-										<small class="d-inline-block" style="margin-right: 0.5em">2020</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
-									</div>
+								<div class="card__description" style="background-color: #25823d">
+									<div class="card__title">Sogeva srl</div>
+									<div class="card__date">2020</div>
 								</div>
 							</a>
 						</div>
-						<div class="swiper-slide work">
-							<a href="https://www.luxurywooditaly.it/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="https://www.luxurywooditaly.it/" target="_blank" class="card-item">
 								<picture>
 									<source srcset="img/luxury-wood-thumbnail.webp" type="image/webp" />
 									<source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
+									<img class="img-fluid card-thumbnail" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #b4986c">
-									<div class="title-box mb-3">
-										<h4>Luxury Wood Italy</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
-										<small class="d-inline-block" style="margin-right: 0.5em">2019</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
-									</div>
+								<div class="card__description" style="background-color: #b4986c">
+									<div class="card__title">Luxury Wood Italy</div>
+									<div class="card__date">2019</div>
 								</div>
 							</a>
 						</div>
-						<div class="swiper-slide work">
-							<a href="http://pneumatici.autocogliati.it/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="http://pneumatici.autocogliati.it/" target="_blank" class="card-item">
 								<picture>
 									<source srcset="img/pneumatici-autocogliati-thumbnail.webp" type="image/webp" />
 									<source srcset="img/pneumatici-autocogliati-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
+									<img class="img-fluid card-thumbnail" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #dc332b">
-									<div class="title-box mb-3">
-										<h4>Pneumatici Autocogliati</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
-										<small class="d-inline-block" style="margin-right: 0.5em">2019</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
-									</div>
+								<div class="card__description" style="background-color: #dc332b">
+									<div class="card__title">Pneumatici Autocogliati</div>
+									<div class="card__date">2019</div>
 								</div>
 							</a>
 						</div>
-						<div class="swiper-slide work">
-							<a href="http://losapierluigi.com/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="http://losapierluigi.com/" target="_blank" class="card-item">
 								<picture>
 									<source srcset="img/losa-pier-luigi-thumbnail.webp" type="image/webp" />
 									<source srcset="img/losa-pier-luigi-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
+									<img class="img-fluid card-thumbnail" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #eb1f3e">
-									<div class="title-box mb-3">
-										<h4>Losa Pier Luigi</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
-										<small class="d-inline-block" style="margin-right: 0.5em">2018</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
-									</div>
+								<div class="card__description" style="background-color: #eb1f3e">
+									<div class="card__title">Losa Pier Luigi</div>
+									<div class="card__date">2018</div>
 								</div>
 							</a>
 						</div>
-						<div class="swiper-slide work">
-							<a href="https://www.casapreziosissimosangue.it/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="https://www.casapreziosissimosangue.it/" target="_blank" class="card-item">
 								<picture>
 									<source srcset="img/casa-preziosissimo-sangue-thumbnail.webp" type="image/webp" />
 									<source srcset="img/casa-preziosissimo-sangue-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
+									<img class="img-fluid card-thumbnail" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #722120">
-									<div class="title-box mb-3">
-										<h4>Casa Preziossissimo Sangue</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
-										<small class="d-inline-block" style="margin-right: 0.5em">2018</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
-									</div>
+								<div class="card__description" style="background-color: #722120">
+									<div class="card__title">Casa Preziossissimo Sangue</div>
+									<div class="card__date">2018</div>
 								</div>
 							</a>
 						</div>
-						<div class="swiper-slide work">
-							<a href="http://timack.it/" target="_blank" class="text-decoration-none d-flex flex-column h-100">
+						<div class="swiper-slide">
+							<a href="http://timack.it/" target="_blank" class="card-item">
 								<picture>
 									<source srcset="img/timack-thumbnail.webp" type="image/webp" />
 									<source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid" src="img/timack-thumbnail.jpg" alt="Timack srl" />
+									<img class="img-fluid card-thumbnail" src="img/timack-thumbnail.jpg" alt="Timack srl" />
 								</picture>
-								<div class="p-4 d-flex flex-column justify-content-between h-100" style="background-color: #0099ff">
-									<div class="title-box mb-3">
-										<h4>Timack srl</h4>
-									</div>
-									<div class="info-meta d-flex flex-row">
+								<div class="card__description" style="background-color: #0099ff">
+									<div class="card__title">Timack srl</div>
+									<div class="card__date">
 										<small class="d-inline-block" style="margin-right: 0.5em">2017</small>
-										<div class="separator-container">
-											<hr class="separator" />
-										</div>
 									</div>
 								</div>
 							</a>
 						</div>
 					</div>
-					<!-- Add Pagination -->
-					<div class="swiper-pagination"></div>
+					<div style="position: relative">
+						<div class="swiper-pagination"></div>
+					</div>
 				</div>
 			</div>
 
@@ -230,8 +182,8 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="js/jquery-3.5.1.slim.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<!-- <script src="js/jquery-3.5.1.slim.min.js"></script> -->
+		<!-- <script src="js/bootstrap.min.js"></script> -->
 
 		<!-- Scripts / init JS -->
 		<script src="js/scripts-init.js"></script>
@@ -239,9 +191,6 @@
 		<!-- Granim JS -->
 		<script src="/js/granim.min.js"></script>
 		<script src="js/granim-init.js"></script>
-
-		<!-- Kit Font Awesome -->
-		<script src="https://kit.fontawesome.com/2b3350905d.js" crossorigin="anonymous"></script>
 
 		<!-- Swiper JS -->
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
