card aspect ratio

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
 				<div class="container">
 					<div class="presentation row align-items-center vh-100 position-relative">
 						<div class="splash-hero-container">
-							<h1 class="fs-3">
-								<div class="fs-1">Ciao, mi chiamo Matteo <span class="hi-emoji">👋</span></div>
-
-								<div class="fs-2">Front-end developer specializzato in <b>WordPress</b> 👨‍💻,</div>
-								<br />ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.
-							</h1>
+							<header class="fs-3">
+								<h2 class="fs-1">Ciao, mi chiamo Matteo <span class="hi-emoji">👋</span></h2>
+								<h1 class="fs-2">Front-end developer 👨‍💻,</h1>
+								<h3>ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.</h3>
+							</header>
 							<div class="social-icon-container fs-2">
 								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" class="text-decoration-none mr-4"><span class="icon-linkedin"></span></a>
 								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" class="text-decoration-none mr-4"><span class="icon-email"></span></a>
@@ -72,7 +71,7 @@
 								<picture>
 									<source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
 									<source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
+									<img class="img-fluid card__img" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
 								</picture>
 								<div class="card__description" style="background-color: #25823d">
 									<div class="card__title">Sogeva srl</div>
@@ -85,7 +84,7 @@
 								<picture>
 									<source srcset="img/luxury-wood-thumbnail.webp" type="image/webp" />
 									<source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
+									<img class="img-fluid card__img" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
 								</picture>
 								<div class="card__description" style="background-color: #b4986c">
 									<div class="card__title">Luxury Wood Italy</div>
@@ -98,7 +97,7 @@
 								<picture>
 									<source srcset="img/pneumatici-autocogliati-thumbnail.webp" type="image/webp" />
 									<source srcset="img/pneumatici-autocogliati-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
+									<img class="img-fluid card__img" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
 								</picture>
 								<div class="card__description" style="background-color: #dc332b">
 									<div class="card__title">Pneumatici Autocogliati</div>
@@ -111,7 +110,7 @@
 								<picture>
 									<source srcset="img/losa-pier-luigi-thumbnail.webp" type="image/webp" />
 									<source srcset="img/losa-pier-luigi-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
+									<img class="img-fluid card__img" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
 								</picture>
 								<div class="card__description" style="background-color: #eb1f3e">
 									<div class="card__title">Losa Pier Luigi</div>
@@ -124,7 +123,7 @@
 								<picture>
 									<source srcset="img/casa-preziosissimo-sangue-thumbnail.webp" type="image/webp" />
 									<source srcset="img/casa-preziosissimo-sangue-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
+									<img class="img-fluid card__img" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
 								</picture>
 								<div class="card__description" style="background-color: #722120">
 									<div class="card__title">Casa Preziossissimo Sangue</div>
@@ -137,7 +136,7 @@
 								<picture>
 									<source srcset="img/timack-thumbnail.webp" type="image/webp" />
 									<source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card-thumbnail" src="img/timack-thumbnail.jpg" alt="Timack srl" />
+									<img class="img-fluid card__img" src="img/timack-thumbnail.jpg" alt="Timack srl" />
 								</picture>
 								<div class="card__description" style="background-color: #0099ff">
 									<div class="card__title">Timack srl</div>
