--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<link rel="icon" type="image/ico" sizes="16x16" href="img/favicon/favicon-16x16.ico" />
 
 		<!-- Custom CSS -->
-		<link rel="stylesheet" href="css/vendor/swiper.min.css" />
 		<link rel="stylesheet" href="css/main.min.css" />
 
 		<!-- Google Font -->
@@ -63,91 +62,88 @@
 			<!-- ########## Portfolio ########## -->
 			<div id="works" class="container">
 				<h2>Lavori selezionati</h2>
+			</div>
 
-				<div class="swiper card-slider-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<a href="https://www.sogevasrl.com/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
-									<source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
-								</picture>
-								<div class="card__description" style="background-color: #25823d">
-									<div class="card__title">Sogeva srl</div>
-									<div class="card__date">2020</div>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="https://www.luxurywooditaly.it/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/luxury-wood-thumbnail.webp" type="image/webp" />
-									<source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
-								</picture>
-								<div class="card__description" style="background-color: #b4986c">
-									<div class="card__title">Luxury Wood Italy</div>
-									<div class="card__date">2019</div>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="http://pneumatici.autocogliati.it/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/pneumatici-autocogliati-thumbnail.webp" type="image/webp" />
-									<source srcset="img/pneumatici-autocogliati-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
-								</picture>
-								<div class="card__description" style="background-color: #dc332b">
-									<div class="card__title">Pneumatici Autocogliati</div>
-									<div class="card__date">2019</div>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="http://losapierluigi.com/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/losa-pier-luigi-thumbnail.webp" type="image/webp" />
-									<source srcset="img/losa-pier-luigi-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
-								</picture>
-								<div class="card__description" style="background-color: #eb1f3e">
-									<div class="card__title">Losa Pier Luigi</div>
-									<div class="card__date">2018</div>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="https://www.casapreziosissimosangue.it/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/casa-preziosissimo-sangue-thumbnail.webp" type="image/webp" />
-									<source srcset="img/casa-preziosissimo-sangue-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
-								</picture>
-								<div class="card__description" style="background-color: #722120">
-									<div class="card__title">Casa Preziossissimo Sangue</div>
-									<div class="card__date">2018</div>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="http://timack.it/" target="_blank" class="card">
-								<picture>
-									<source srcset="img/timack-thumbnail.webp" type="image/webp" />
-									<source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
-									<img class="img-fluid card__img" src="img/timack-thumbnail.jpg" alt="Timack srl" />
-								</picture>
-								<div class="card__description" style="background-color: #0099ff">
-									<div class="card__title">Timack srl</div>
-									<div class="card__date">
-										<small class="d-inline-block" style="margin-right: 0.5em">2017</small>
-									</div>
-								</div>
-							</a>
+			<div class="container container--grid container--full">
+				<!-- Sogeva -->
+				<a href="https://www.sogevasrl.com/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
+						<source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/sogeva-thumbnail.jpg" alt="Sogeva srl" />
+					</picture>
+					<div class="card__description" style="background-color: #25823d">
+						<div class="card__title">Sogeva srl</div>
+						<div class="card__date">2020</div>
+					</div>
+				</a>
+
+				<!-- Luxury Wood -->
+				<a href="https://www.luxurywooditaly.it/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/luxury-wood-thumbnail.webp" type="image/webp" />
+						<source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
+					</picture>
+					<div class="card__description" style="background-color: #b4986c">
+						<div class="card__title">Luxury Wood Italy</div>
+						<div class="card__date">2019</div>
+					</div>
+				</a>
+
+				<!-- Pneumatici -->
+				<a href="http://pneumatici.autocogliati.it/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/pneumatici-autocogliati-thumbnail.webp" type="image/webp" />
+						<source srcset="img/pneumatici-autocogliati-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/pneumatici-autocogliati-thumbnail.jpg" alt="Pneumatici Autocogliati" />
+					</picture>
+					<div class="card__description" style="background-color: #dc332b">
+						<div class="card__title">Pneumatici Autocogliati</div>
+						<div class="card__date">2019</div>
+					</div>
+				</a>
+
+				<!-- Losa -->
+				<a href="http://losapierluigi.com/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/losa-pier-luigi-thumbnail.webp" type="image/webp" />
+						<source srcset="img/losa-pier-luigi-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/losa-pier-luigi-thumbnail.jpg" alt="Losa Pier Luigi" />
+					</picture>
+					<div class="card__description" style="background-color: #eb1f3e">
+						<div class="card__title">Losa Pier Luigi</div>
+						<div class="card__date">2018</div>
+					</div>
+				</a>
+
+				<!-- Casa -->
+				<a href="https://www.casapreziosissimosangue.it/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/casa-preziosissimo-sangue-thumbnail.webp" type="image/webp" />
+						<source srcset="img/casa-preziosissimo-sangue-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/casa-preziosissimo-sangue-thumbnail.jpg" alt="Casa Preziossissimo Sangue" />
+					</picture>
+					<div class="card__description" style="background-color: #722120">
+						<div class="card__title">Casa Preziossissimo Sangue</div>
+						<div class="card__date">2018</div>
+					</div>
+				</a>
+
+				<!-- Timack -->
+				<a href="http://timack.it/" target="_blank" class="card">
+					<picture>
+						<source srcset="img/timack-thumbnail.webp" type="image/webp" />
+						<source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/timack-thumbnail.jpg" alt="Timack srl" />
+					</picture>
+					<div class="card__description" style="background-color: #0099ff">
+						<div class="card__title">Timack srl</div>
+						<div class="card__date">
+							<small class="d-inline-block" style="margin-right: 0.5em">2017</small>
 						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</main>
 
@@ -176,7 +172,6 @@
 
 		<!-- Vendor -->
 		<script src="js/vendor/granim.min.js"></script>
-		<script src="js/vendor/swiper-bundle.min.js"></script>
 
 		<script src="js/main.js"></script>
 	</body>
