add prineos work

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 								<h3>ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.</h3>
 							</header>
 							<div class="social-icon-container fs-2">
-								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" class="text-decoration-none mr-4"><span class="icon-linkedin"></span></a>
-								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" class="text-decoration-none mr-4"><span class="icon-email"></span></a>
+								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span class="icon-linkedin"></span></a>
+								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span class="icon-email"></span></a>
 								<a href="tel:+393486741003" class="text-decoration-none mr-4"><span class="icon-mobile"></span></a>
 							</div>
 							<a href="#works">
@@ -65,8 +65,21 @@
 			</div>
 
 			<div class="container container--grid container--full">
+				<!-- Prineos -->
+				<a href="https://prineos.com/" target="_blank" rel="noopener" class="card">
+					<picture>
+						<source srcset="img/prineos-thumbnail.webp" type="image/webp" />
+						<source srcset="img/prineos-thumbnail.jpg" type="image/jpeg" />
+						<img class="img-fluid card__img" src="img/prineos-thumbnail.jpg" alt="Prineos" />
+					</picture>
+					<div class="card__description" style="background-color: #2e2864">
+						<div class="card__title">Prineos</div>
+						<div class="card__date">2021</div>
+					</div>
+				</a>
+
 				<!-- Sogeva -->
-				<a href="https://www.sogevasrl.com/" target="_blank" class="card">
+				<a href="https://www.sogevasrl.com/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
 						<source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
@@ -79,20 +92,20 @@
 				</a>
 
 				<!-- Luxury Wood -->
-				<a href="https://www.luxurywooditaly.it/" target="_blank" class="card">
+				<a href="https://www.luxurywooditaly.it/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/luxury-wood-thumbnail.webp" type="image/webp" />
 						<source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
 						<img class="img-fluid card__img" src="img/luxury-wood-thumbnail.jpg" alt="Luxury Wood Italy" />
 					</picture>
-					<div class="card__description" style="background-color: #b4986c">
+					<div class="card__description" style="background-color: #6c5837">
 						<div class="card__title">Luxury Wood Italy</div>
 						<div class="card__date">2019</div>
 					</div>
 				</a>
 
 				<!-- Pneumatici -->
-				<a href="http://pneumatici.autocogliati.it/" target="_blank" class="card">
+				<a href="http://pneumatici.autocogliati.it/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/pneumatici-autocogliati-thumbnail.webp" type="image/webp" />
 						<source srcset="img/pneumatici-autocogliati-thumbnail.jpg" type="image/jpeg" />
@@ -105,7 +118,7 @@
 				</a>
 
 				<!-- Losa -->
-				<a href="http://losapierluigi.com/" target="_blank" class="card">
+				<a href="http://losapierluigi.com/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/losa-pier-luigi-thumbnail.webp" type="image/webp" />
 						<source srcset="img/losa-pier-luigi-thumbnail.jpg" type="image/jpeg" />
@@ -118,7 +131,7 @@
 				</a>
 
 				<!-- Casa -->
-				<a href="https://www.casapreziosissimosangue.it/" target="_blank" class="card">
+				<a href="https://www.casapreziosissimosangue.it/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/casa-preziosissimo-sangue-thumbnail.webp" type="image/webp" />
 						<source srcset="img/casa-preziosissimo-sangue-thumbnail.jpg" type="image/jpeg" />
@@ -131,7 +144,7 @@
 				</a>
 
 				<!-- Timack -->
-				<a href="http://timack.it/" target="_blank" class="card">
+				<a href="http://timack.it/" target="_blank" rel="noopener" class="card">
 					<picture>
 						<source srcset="img/timack-thumbnail.webp" type="image/webp" />
 						<source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
