--- a/index-original.html
+++ b/index-original.html
@@ -185,7 +185,6 @@
 
 		<!-- Vendor -->
 		<script src="js/vendor/granim.min.js"></script>
-
-		<script src="js/main.js"></script>
+		<script src="js/main.min.js"></script>
 	</body>
 </html>
