add seo meta tag

--- a/index-original.html
+++ b/index-original.html
@@ -5,8 +5,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<!-- Title page -->
+		<!-- Title page - SEO -->
 		<title>Matteo Rigamonti</title>
+		<meta name="description" content="Matteo Rigamonti, Front-end Developer" />
+		<meta name="robots" content="index, follow" />
 
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.ico" />
