--- a/index-original.html
+++ b/index-original.html
@@ -46,9 +46,9 @@
 								<h3>ho collaborato con web agency e lavorato come freelance, realizzando siti internet sviluppandone la parte grafica e del codice con un’attenzione alla UX.</h3>
 							</header>
 							<div class="social-icon-container fs-2">
-								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span class="icon-linkedin"></span></a>
-								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span class="icon-email"></span></a>
-								<a href="tel:+393486741003" class="text-decoration-none mr-4"><span class="icon-mobile"></span></a>
+								<a href="https://www.linkedin.com/in/matteo-rigamonti/" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span>LinkedIn</span><span class="icon-linkedin"></span></a>
+								<a href="mailto:matteo_rigamonti@hotmail.it" target="_blank" rel="noopener" class="text-decoration-none mr-4"><span>Email</span><span class="icon-email"></span></a>
+								<a href="tel:+393486741003" class="text-decoration-none mr-4"><span>Telefono</span><span class="icon-mobile"></span></a>
 							</div>
 							<a href="#works">
 								<span class="icon-arrow-down fs-2"></span>
