--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matteo Rigamonti</title>
+    <title>Matteo Rigamonti - Ciao</title>
     <meta name="description" content="Matteo Rigamonti, Front-end Developer" />
     <meta name="robots" content="index, follow" />
     <link
