--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matteo Rigamonti - Ciao Branch</title>
+    <title>Matteo Rigamonti</title>
     <meta name="description" content="Matteo Rigamonti, Front-end Developer" />
     <meta name="robots" content="index, follow" />
     <link
@@ -23,7 +23,7 @@
       sizes="16x16"
       href="img/favicon/favicon-16x16.ico"
     />
-    <link rel="stylesheet" href="css/main.min.css" />
+    <link rel="stylesheet" href="scss/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
@@ -32,235 +32,36 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-180341014-1"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "UA-180341014-1");
-    </script>
   </head>
   <body>
     <main>
-      <div class="splash-hero">
-        <div class="container">
-          <div
-            class="presentation row align-items-center vh-100 position-relative"
-          >
-            <div class="splash-hero-container">
-              <header class="fs-3">
-                <h2 class="fs-1">
-                  Ciao, mi chiamo Matteo <span class="hi-emoji">👋</span>
-                </h2>
-                <h1 class="fs-2">Front-end developer 👨‍💻,</h1>
-                <h3>
-                  ho collaborato con web agency e lavorato come freelance,
-                  realizzando siti internet sviluppandone la parte grafica e del
-                  codice con un’attenzione alla UX.
-                </h3>
-              </header>
-              <div class="social-icon-container fs-2">
-                <a
-                  href="https://www.linkedin.com/in/matteo-rigamonti/"
-                  target="_blank"
-                  rel="noopener"
-                  name="LinkedIn"
-                  class="text-decoration-none mr-4"
-                  ><span class="icon-linkedin"></span
-                  ><span class="icon-label">LinkedIn</span></a
-                ><a
-                  href="mailto:matteo_rigamonti@hotmail.it"
-                  target="_blank"
-                  rel="noopener"
-                  name="Email"
-                  class="text-decoration-none mr-4"
-                  ><span class="icon-email"></span
-                  ><span class="icon-label">Email</span></a
-                ><a
-                  href="tel:+393486741003"
-                  name="Telefono"
-                  class="text-decoration-none mr-4"
-                  ><span class="icon-mobile"></span
-                  ><span class="icon-label">Telefono</span></a
-                >
-              </div>
-              <a href="#works"
-                ><span class="icon-arrow-down fs-2"
-                  ><span class="icon-label">Vai ai lavori</span></span
-                ></a
-              >
-            </div>
-          </div>
+      <a
+        href="https://github.com/matteorigamonti"
+        target="_blank"
+        class="github"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 96">
+          <path
+            fill-rule="evenodd"
+            d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </a>
+      <div class="hero">
+        <div>
+          <h1>
+            Ciao, mi chiamo Matteo, <br /><span class="smallTitle"
+              >sono un Front-end developer</span
+            >
+          </h1>
+          <p>
+            ho collaborato con web agency e lavorato come freelance,<br />
+            realizzando siti internet sviluppandone la parte grafica<br />
+            e del codice con un’attenzione alla UX.
+          </p>
         </div>
-        <canvas class="gradient-box" id="canvas-basic"></canvas>
-      </div>
-      <div id="works" class="container"><h2>Lavori selezionati</h2></div>
-      <div class="container container--grid container--full">
-        <a
-          href="https://prineos.com/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source srcset="img/prineos-thumbnail.webp" type="image/webp" />
-            <source srcset="img/prineos-thumbnail.jpg" type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/prineos-thumbnail.jpg"
-              alt="Prineos"
-          /></picture>
-          <div class="card__description" style="background-color: #2e2864">
-            <div class="card__title">Prineos</div>
-            <div class="card__date">2021</div>
-          </div></a
-        ><a
-          href="https://www.sogevasrl.com/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source srcset="img/sogeva-thumbnail.webp" type="image/webp" />
-            <source srcset="img/sogeva-thumbnail.jpg" type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/sogeva-thumbnail.jpg"
-              alt="Sogeva srl"
-          /></picture>
-          <div class="card__description" style="background-color: #25823d">
-            <div class="card__title">Sogeva srl</div>
-            <div class="card__date">2020</div>
-          </div></a
-        ><a
-          href="https://www.luxurywooditaly.it/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source
-              srcset="img/luxury-wood-thumbnail.webp"
-              type="image/webp" />
-            <source srcset="img/luxury-wood-thumbnail.jpg" type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/luxury-wood-thumbnail.jpg"
-              alt="Luxury Wood Italy"
-          /></picture>
-          <div class="card__description" style="background-color: #6c5837">
-            <div class="card__title">Luxury Wood Italy</div>
-            <div class="card__date">2019</div>
-          </div></a
-        ><a
-          href="http://pneumatici.autocogliati.it/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source
-              srcset="img/pneumatici-autocogliati-thumbnail.webp"
-              type="image/webp" />
-            <source
-              srcset="img/pneumatici-autocogliati-thumbnail.jpg"
-              type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/pneumatici-autocogliati-thumbnail.jpg"
-              alt="Pneumatici Autocogliati"
-          /></picture>
-          <div class="card__description" style="background-color: #dc332b">
-            <div class="card__title">Pneumatici Autocogliati</div>
-            <div class="card__date">2019</div>
-          </div></a
-        ><a
-          href="http://losapierluigi.com/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source
-              srcset="img/losa-pier-luigi-thumbnail.webp"
-              type="image/webp" />
-            <source
-              srcset="img/losa-pier-luigi-thumbnail.jpg"
-              type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/losa-pier-luigi-thumbnail.jpg"
-              alt="Losa Pier Luigi"
-          /></picture>
-          <div class="card__description" style="background-color: #eb1f3e">
-            <div class="card__title">Losa Pier Luigi</div>
-            <div class="card__date">2018</div>
-          </div></a
-        ><a
-          href="https://www.casapreziosissimosangue.it/"
-          target="_blank"
-          rel="noopener"
-          class="card"
-          ><picture
-            ><source
-              srcset="img/casa-preziosissimo-sangue-thumbnail.webp"
-              type="image/webp" />
-            <source
-              srcset="img/casa-preziosissimo-sangue-thumbnail.jpg"
-              type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/casa-preziosissimo-sangue-thumbnail.jpg"
-              alt="Casa Preziossissimo Sangue"
-          /></picture>
-          <div class="card__description" style="background-color: #722120">
-            <div class="card__title">Casa Preziossissimo Sangue</div>
-            <div class="card__date">2018</div>
-          </div></a
-        ><a href="http://timack.it/" target="_blank" rel="noopener" class="card"
-          ><picture
-            ><source srcset="img/timack-thumbnail.webp" type="image/webp" />
-            <source srcset="img/timack-thumbnail.jpg" type="image/jpeg" />
-            <img
-              class="img-fluid card__img"
-              src="img/timack-thumbnail.jpg"
-              alt="Timack srl"
-          /></picture>
-          <div class="card__description" style="background-color: #0099ff">
-            <div class="card__title">Timack srl</div>
-            <div class="card__date">
-              <small class="d-inline-block" style="margin-right: 0.5em"
-                >2017</small
-              >
-            </div>
-          </div></a
-        >
       </div>
     </main>
-    <footer>
-      <div class="container">
-        <a
-          href="https://www.iubenda.com/privacy-policy/35281125"
-          class="iubenda-white iubenda-embed"
-          title="Privacy Policy "
-          >Privacy Policy</a
-        >
-        <script>
-          (function (w, d) {
-            var loader = function () {
-              var s = d.createElement("script"),
-                tag = d.getElementsByTagName("script")[0];
-              s.src = "https://cdn.iubenda.com/iubenda.js";
-              tag.parentNode.insertBefore(s, tag);
-            };
-            if (w.addEventListener) {
-              w.addEventListener("load", loader, false);
-            } else if (w.attachEvent) {
-              w.attachEvent("onload", loader);
-            } else {
-              w.onload = loader;
-            }
-          })(window, document);
-        </script>
-      </div>
-    </footer>
-    <script src="js/vendor/granim.min.js"></script>
-    <script src="js/main.min.js"></script>
   </body>
 </html>
